--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,15 @@
+/**{
+    border: 1px solid red;
+}*/
+
 #repo-details {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    color: #222222;
+    font-size: 1.2em;
 }
 
 #readMe{
@@ -11,41 +17,103 @@
 }
 
 .results-page-container {
-    margin: 20px;
-    height: 100%;
-    width: 100%;
+    min-width: 320px;
+    max-width: 800px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.results-page-container-nr {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .repo-info {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 500px;
     margin-top: 10px;
     border-top: 1px solid black;
     min-height: 100px;
+    max-height: 200px;
+    padding: 10px;
+    width: 100%;
+    overflow: scroll;
 }
 
 .repo-name {
-    font-size: 20px;
+    font-size: 2em;
     font-weight: bolder;
-    color: #337AB7;
+    color: #222222;
 }
 
+#repo-link {
+    background-color: #222222;
+    border-color: #222222;
+    display: inline;
+}
 .repo-update {
+    margin-top: 5px;
     font-style: italic
 }
 
 .repo-lang {
+    margin-top: 5px;
     font-style: italic
+}
+
+.repo-desc {
+    margin-top: 10px; 
+    font-size: 1.5em;  
+}
+
+.repo-name-cont {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #home-pic {
     display: block;
     margin: auto;
+    width: 50%;
 }
 
 .modal-body {
     overflow: scroll;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #222222;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh; 
 }
