--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,3 @@
-/**{
-    border: 1px solid red;
-}*/
-
 #repo-details {
     display: flex;
     flex-flow: row wrap;
@@ -45,7 +41,7 @@
     margin-top: 10px;
     border-top: 1px solid black;
     min-height: 100px;
-    max-height: 200px;
+    max-height: 220px;
     padding: 10px;
     width: 100%;
     overflow: scroll;
@@ -58,22 +54,16 @@
 }
 
 #repo-link {
-    background-color: #222222;
+    background: linear-gradient(to left, #606060 0%, #222222 100%);
     border-color: #222222;
-    display: inline;
+    margin-bottom: 10px;
 }
 .repo-update {
-    margin-top: 5px;
-    font-style: italic
-}
-
-.repo-lang {
-    margin-top: 5px;
     font-style: italic
 }
 
 .repo-desc {
-    margin-top: 10px; 
+    margin-top: 5px;
     font-size: 1.5em;  
 }
 
@@ -82,9 +72,6 @@
     flex-flow: row nowrap;
     align-items: center;
     width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 }
 
 #home-pic {
@@ -116,4 +103,8 @@
     justify-content: center;
     align-items: center;
     height: 60vh; 
+}
+
+#nav {
+    background: linear-gradient(to left, #606060 0%, #222222 100%);
 }
